Css fixes and changes
Fixed buttons line height adding unwanted space, changed background gradient and font color, Css refactored with saas, Fixed media query to target portrait orientation

--- a/src/index.scss
+++ b/src/index.scss
@@ -2,9 +2,13 @@
 
 html,
 body {
-  background-image: linear-gradient(to top, #c79081 0%, #dfa579 100%);
+  background-image: radial-gradient(
+    circle farthest-corner at 12.3% 19.3%,
+    rgba(85, 88, 218, 1) 0%,
+    rgba(95, 209, 249, 1) 100.2%
+  );
   font-family: "Bitter", serif;
-  color: rgb(48, 37, 18);
+  color: rgb(53, 49, 44);
   width: 100%;
   height: 100%;
   margin: 0px;
@@ -13,20 +17,8 @@ body {
   display: block;
 }
 
-h1 {
-  margin: auto;
-  padding: 25px 25px 10px 25px;
-  font-size: 2.5vw;
-  text-align: end;
-}
-
-h2 {
-  font-size: 2vw;
-  text-align: center;
-}
-
 #quote-box {
-  background-color: rgba(253, 255, 255, 0.473);
+  background-color: rgba(253, 255, 255, 0.7);
   position: absolute;
   min-width: 65%;
   max-width: 100%;
@@ -37,59 +29,63 @@ h2 {
   -moz-border-radius: 45px 15px 45px 15px;
   -webkit-border-radius: 45px 15px 45px 15px;
   border: 0px solid #000000;
-  -webkit-box-shadow: 8px 11px 24px -7px rgba(99, 95, 87, 0.87);
-  -moz-box-shadow: 8px 11px 24px -7px rgba(99, 95, 87, 0.87);
-  box-shadow: 8px 11px 24px -7px rgba(99, 95, 87, 0.87);
-}
-
-.buttons {
-  display: flex;
-  justify-content: space-around;
-  text-align: justify;
-  align-items: center;
-  color: rgba(48, 37, 18, 0.9);
-}
-
-#tweet-quote {
-  display: inline-block;
-  color: inherit;
-  transition: ease 0.3s;
-  font-size: 5vw;
-}
-
-#tweet-quote:hover {
-  cursor: pointer;
-  color: #239bca;
-  transform: scale(1.1, 1.1);
-}
-
-#new-quote {
-  transition: ease 0.3s;
-  font-size: 10vw;
-  transform: rotate(90deg);
-}
-
-#new-quote:hover {
-  cursor: pointer;
-  color: rgba(48, 37, 18, 1);
-  transform: rotate(90deg) scale(1.1, 1.1);
-}
-
-@media (max-width: 1024px) {
-  h1 {
-    font-size: 5vw;
+  -webkit-box-shadow: 5px 5px 32px 0px rgba(0,0,0,0.08);
+-moz-box-shadow: 5px 5px 32px 0px rgba(0,0,0,0.08);
+box-shadow: 5px 5px 32px 0px rgba(0,0,0,0.08);  
+  @media (orientation: portrait) {
+    min-width: 85%;
   }
-  h2 {
-    font-size: 3.5vw;
+
+  #text h1 {
+    margin: auto;
+    padding: 25px 25px 10px 25px;
+    font-size: 2.5vw;
+    text-align: end;
   }
-  #quote-box {
-    min-width: 90%;
-    max-width: 100%;
+
+  #author h2 {
+    font-size: 2vw;
+    text-align: center;
   }
-  #tweet-quote {
-    font-size: 10vw;
+
+  hr {
+    border: 0;
+    height: 0;
+    border-top: 1px solid rgba(0, 0, 0, 0.1);
+    border-bottom: 1px solid rgba(255, 255, 255, 0.3);
   }
-  #new-quote {
-    font-size: 15vw;
+
+  .buttons {
+    display: flex;
+    justify-content: space-around;
+    text-align: justify;
+    align-items: center;
+    line-height: 0.8em;
+    color: rgba(53, 49, 44, 0.9);
+    margin: 8px 0px;
+
+    #tweet-quote {
+      display: inline-block;
+      color: inherit;
+      transition: ease 0.3s;
+      font-size: 6vw;
+      &:hover {
+        cursor: pointer;
+        color: #239bca;
+        transform: scale(1.1, 1.1);
+      }
+    }
+
+    #new-quote {
+      height: 100%;
+      transition: ease 0.3s;
+      font-size: 10vw;
+      transform: rotate(90deg);
+      &:hover {
+        cursor: pointer;
+        color: rgba(53, 49, 44, 1);
+        transform: rotate(90deg) scale(1.1, 1.1);
+      }
+    }
   }
 }
